examples/test/testpolicy19949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19949
  namespace: namespace82
spec:
  podSelector:
    matchLabels:
      key34: value38
      key47: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value2
          key5: value44
          key20: value19
      podSelector:
        matchLabels:
          key14: value33
          key13: value15
